# img-miteyo

./: .gitignore  docker-compose.yml
.github/workflows/: ci.yaml
backend/: Cargo.toml  Dockerfile  Makefile.toml  compose.yml  docker-up.sh
backend/src/: main.rs
infra/: aws_network.py  create-s3-bucket-for-tfstate.sh  main.tf
infra/app/: main.tf  variable.tf
infra/codebuild/: main.tf  variable.tf
infra/iam/: main.tf  outputs.tf  variable.tf
infra/middleware/: main.tf  variables.tf
infra/network/: main.tf  outputs.tf
infra/secrets/: main.tf  outputs.tf
