[package]
name = "img-miteyo"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros"] }
rstest = "0.25.0"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "chrono",
    "macros",
    "postgres",
    "migrate",
] }
tokio = { version = "1.45.1", features = ["full"] }
